--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/better_exposed_filters": "^3.0@alpha",
         "drupal/console": "~1.0",
         "drupal/core": "~8.5.1",
+        "drupal/flag": "^4.0@alpha",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
