--- a/web/themes/bobpol/bobpol.info.yml
+++ b/web/themes/bobpol/bobpol.info.yml
@@ -4,7 +4,7 @@ description: 'A theme for bob imitating aarhus.dk'
 core: 8.x
 libraries:
   - bobpol/global-styling
-  - bobpol/global-scripts
+  - bobpol/bottom-scripts
 regions:
   header: Header
   content: Content
