--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,4 +1,5 @@
 module:
+  aarhus_hero: 0
   better_exposed_filters: 0
   block: 0
   breakpoint: 0
@@ -13,6 +14,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  flag: 0
   image: 0
   language: 0
   locale: 0
