--- a/web/themes/bobpol/bobpol.info.yml
+++ b/web/themes/bobpol/bobpol.info.yml
@@ -7,6 +7,7 @@ libraries:
   - bobpol/bottom-scripts
 regions:
   header: Header
+  hero: Hero
   content: Content
   footer: Footer
 stylesheets-remove:
