--- a/config/sync/core.entity_view_display.node.post.teaser.yml
+++ b/config/sync/core.entity_view_display.node.post.teaser.yml
@@ -33,10 +33,15 @@ content:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
+  flag_promote:
+    weight: 10
+    region: content
   links:
     weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_category: true
+  field_comments: true
   langcode: true
