--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -17,7 +17,10 @@ module:
   flag: 0
   image: 0
   language: 0
+  link: 0
   locale: 0
+  menu_link_content: 0
+  menu_ui: 0
   node: 0
   page_cache: 0
   system: 0
