--- a/config/sync/views.view.front.yml
+++ b/config/sync/views.view.front.yml
@@ -392,7 +392,7 @@ display:
           exposed: true
           expose:
             operator_id: tid_op
-            label: 'Har taksonomiterm'
+            label: ''
             description: ''
             use_operator: false
             operator: tid_op
