--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -8,7 +8,6 @@ dependencies:
     - field.field.user.user.field_valid
     - field.field.user.user.field_validation_date
   module:
-    - datetime
     - user
 id: user.user.default
 targetEntityType: user
@@ -16,42 +15,15 @@ bundle: user
 mode: default
 content:
   account:
-    weight: -10
-    region: content
-  field_first_name:
-    weight: 7
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_last_name:
-    weight: 8
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_valid:
-    weight: 10
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_validation_date:
-    weight: 9
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
-  language:
     weight: 0
     region: content
-  timezone:
-    weight: 6
-    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
+  field_first_name: true
+  field_last_name: true
+  field_valid: true
+  field_validation_date: true
   langcode: true
+  language: true
+  timezone: true
