SALG-299: Changed user profile

--- a/config/sync/user.role.admin.yml
+++ b/config/sync/user.role.admin.yml
@@ -13,11 +13,13 @@ permissions:
   - 'access hero configuration'
   - 'access site in maintenance mode'
   - 'access toolbar'
+  - 'administer account settings'
   - 'administer menu'
   - 'administer nodes'
   - 'administer site configuration'
   - 'administer taxonomy'
   - 'administer users'
+  - 'cancel account'
   - 'create post content'
   - 'create static_page content'
   - 'create terms in subjects'
