--- a/config/sync/core.entity_form_display.node.post.default.yml
+++ b/config/sync/core.entity_form_display.node.post.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.post.body
     - field.field.node.post.field_category
     - field.field.node.post.field_comments
+    - field.field.node.post.field_hotness
     - field.field.node.post.field_image
     - image.style.thumbnail
     - node.type.post
@@ -44,6 +45,12 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: comment_default
+    region: content
+  field_hotness:
+    weight: 125
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
     region: content
   field_image:
     weight: 122
