--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -2,6 +2,7 @@ module:
   aarhus_hero: 0
   better_exposed_filters: 0
   block: 0
+  bobpol_hotness: 0
   breakpoint: 0
   ckeditor: 0
   comment: 0
@@ -22,6 +23,7 @@ module:
   menu_link_content: 0
   menu_ui: 0
   node: 0
+  options: 0
   page_cache: 0
   system: 0
   taxonomy: 0
