--- a/config/sync/core.entity_view_display.node.post.default.yml
+++ b/config/sync/core.entity_view_display.node.post.default.yml
@@ -9,13 +9,62 @@ dependencies:
     - field.field.node.post.field_comments
     - field.field.node.post.field_hotness
     - field.field.node.post.field_image
+    - image.style.hero
     - node.type.post
   module:
     - comment
+    - ds
     - image
     - options
     - text
     - user
+third_party_settings:
+  ds:
+    layout:
+      id: ds_2col_stacked
+      library: ds/ds_2col_stacked
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          header: div
+          left: div
+          right: aside
+          footer: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      header:
+        - node_title
+        - field_image
+      left:
+        - node_changed_date
+        - body
+      right:
+        - field_category
+        - flag_promote
+        - field_hotness
+      footer:
+        - field_comments
+    fields:
+      node_changed_date:
+        plugin_id: node_changed_date
+        weight: 2
+        label: hidden
+        formatter: ds_post_date_long
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          wrapper: h1
+          class: ''
+          link: false
 id: node.post.default
 targetEntityType: node
 bundle: post
@@ -23,44 +72,51 @@ mode: default
 content:
   body:
     label: hidden
-    type: text_default
-    weight: 0
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-  field_comments:
+    type: text_trimmed
     weight: 3
+    settings:
+      trim_length: 600
+    third_party_settings: {  }
+    region: left
+  field_category:
+    type: entity_reference_entity_view
+    weight: 4
+    region: right
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+  field_comments:
+    weight: 7
     label: above
     settings:
       view_mode: default
       pager_id: 0
     third_party_settings: {  }
     type: comment_default
-    region: content
+    region: footer
   field_hotness:
-    weight: 11
+    weight: 6
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
-    region: content
+    region: right
   field_image:
     weight: 1
     label: hidden
     settings:
-      image_style: ''
+      image_style: hero
       image_link: ''
     third_party_settings: {  }
     type: image
-    region: content
+    region: header
   flag_promote:
-    weight: 10
-    region: content
-  links:
-    weight: 2
-    region: content
+    weight: 5
+    region: right
     settings: {  }
     third_party_settings: {  }
 hidden:
-  field_category: true
   langcode: true
+  links: true
