--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -17,7 +17,10 @@ module:
   filter: 0
   flag: 0
   image: 0
+  itk_admin_links: 0
+  itk_cookie_message: 0
   language: 0
+  layout_discovery: 0
   link: 0
   locale: 0
   menu_link_content: 0
@@ -29,9 +32,12 @@ module:
   taxonomy: 0
   text: 0
   toolbar: 0
+  toolbar_visibility: 0
   update: 0
   user: 0
   views_ui: 0
+  ds: 1
+  ds_extras: 2
   views: 10
   minimal: 1000
 theme:
