--- a/config/sync/views.view.front.yml
+++ b/config/sync/views.view.front.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.storage.node.body
+    - node.type.post
     - taxonomy.vocabulary.subjects
   module:
     - better_exposed_filters
@@ -59,12 +60,7 @@ display:
               allow_secondary: false
               secondary_label: 'Avancerede indstillinger'
               autosubmit: true
-              autosubmit_hide: false
-            combine:
-              bef_format: default
-              more_options:
-                is_secondary: false
-                placeholder_text: ''
+              autosubmit_hide: true
             tid:
               bef_format: bef
               more_options:
@@ -284,47 +280,6 @@ display:
           expose:
             operator: ''
           group: 1
-        combine:
-          id: combine
-          table: views
-          field: combine
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: contains
-          value: ''
-          group: 1
-          exposed: true
-          expose:
-            operator_id: combine_op
-            label: Search
-            description: ''
-            use_operator: false
-            operator: combine_op
-            identifier: combine
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-            placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          fields:
-            title: title
-            body: body
-          plugin_id: combine
         tid:
           id: tid
           table: taxonomy_index
@@ -369,6 +324,46 @@ display:
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            post: post
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
       sorts:
         created:
           id: created
@@ -406,6 +401,8 @@ display:
       tags:
         - 'config:core.entity_view_display.node.post.default'
         - 'config:core.entity_view_display.node.post.teaser'
+        - 'config:core.entity_view_display.node.static_page.default'
+        - 'config:core.entity_view_display.node.static_page.teaser'
         - 'config:field.storage.node.body'
   page_1:
     display_plugin: page
@@ -427,4 +424,6 @@ display:
       tags:
         - 'config:core.entity_view_display.node.post.default'
         - 'config:core.entity_view_display.node.post.teaser'
+        - 'config:core.entity_view_display.node.static_page.default'
+        - 'config:core.entity_view_display.node.static_page.teaser'
         - 'config:field.storage.node.body'
