--- a/web/themes/bobpol/bobpol.info.yml
+++ b/web/themes/bobpol/bobpol.info.yml
@@ -9,6 +9,7 @@ regions:
   header: Header
   hero: Hero
   content: Content
+  sidebar: Sidebar
   footer: Footer
 stylesheets-remove:
   - normalize.css
