--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -9,6 +9,11 @@ label: 'Godkendt bruger'
 weight: 1
 is_admin: false
 permissions:
+  - 'access comments'
   - 'access content'
+  - 'edit own comments'
   - 'flag promote'
+  - 'post comments'
+  - 'skip comment approval'
   - 'unflag promote'
+  - 'view the administration theme'
