--- a/config/sync/field.field.node.post.field_hotness.yml
+++ b/config/sync/field.field.node.post.field_hotness.yml
@@ -13,9 +13,11 @@ entity_type: node
 bundle: post
 label: Hotness
 description: ''
-required: false
+required: true
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: 1
 default_value_callback: ''
 settings: {  }
 field_type: list_integer
