SALG-299: Added config

--- a/config/sync/core.entity_view_display.comment.input.default.yml
+++ b/config/sync/core.entity_view_display.comment.input.default.yml
@@ -19,8 +19,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  links:
-    weight: 100
-    region: content
 hidden:
   langcode: true
+  links: true
