--- a/config/sync/editor.editor.filtered_html.yml
+++ b/config/sync/editor.editor.filtered_html.yml
@@ -26,6 +26,15 @@ settings:
           name: Format
           items:
             - Format
+        -
+          name: Extras
+          items:
+            - Blockquote
+            - DrupalImage
+            - Table
+            - BulletedList
+            - NumberedList
+            - HorizontalRule
   plugins:
     stylescombo:
       styles: ''
