--- a/config/sync/filter.format.filtered_html.yml
+++ b/config/sync/filter.format.filtered_html.yml
@@ -12,7 +12,7 @@ filters:
     status: true
     weight: -10
     settings:
-      allowed_html: '<a href hreflang> <em> <strong> <h3 id> <h4 id> <h5 id> <h6 id> <p>'
+      allowed_html: '<a href hreflang> <em> <strong> <h3 id> <h4 id> <h5 id> <h6 id> <p> <img src alt data-entity-type data-entity-uuid> <blockquote> <table> <caption> <tbody> <thead> <tfoot> <th> <td> <tr> <ul> <li> <ol> <hr>'
       filter_html_help: true
       filter_html_nofollow: false
   filter_autop:
