--- a/config/sync/core.entity_view_display.node.static_page.default.yml
+++ b/config/sync/core.entity_view_display.node.static_page.default.yml
@@ -50,6 +50,10 @@ third_party_settings:
         weight: 0
         label: hidden
         formatter: default
+        settings:
+          wrapper: ''
+          class: ''
+          link: false
 id: node.static_page.default
 targetEntityType: node
 bundle: static_page
