--- a/config/sync/core.entity_view_display.node.post.default.yml
+++ b/config/sync/core.entity_view_display.node.post.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.post.field_comments
     - field.field.node.post.field_hotness
     - field.field.node.post.field_image
+    - field.field.node.post.field_teaser
     - image.style.hero
     - node.type.post
   module:
@@ -41,6 +42,7 @@ third_party_settings:
         - node_title
         - field_image
       left:
+        - field_teaser
         - body
         - node_changed_date
       right:
@@ -51,7 +53,7 @@ third_party_settings:
     fields:
       node_changed_date:
         plugin_id: node_changed_date
-        weight: 3
+        weight: 4
         label: inline
         formatter: ds_post_date_long
       node_title:
@@ -71,20 +73,20 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     region: left
   field_category:
     type: entity_reference_label
-    weight: 4
+    weight: 5
     region: right
     label: hidden
     settings:
       link: false
     third_party_settings: {  }
   field_comments:
-    weight: 6
+    weight: 7
     label: above
     settings:
       view_mode: default
@@ -101,8 +103,15 @@ content:
     third_party_settings: {  }
     type: image
     region: header
+  field_teaser:
+    weight: 2
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: left
   flag_promote:
-    weight: 5
+    weight: 6
     region: right
     settings: {  }
     third_party_settings: {  }
