SALG-299: Added html

--- a/config/sync/field.field.comment.input.comment_body.yml
+++ b/config/sync/field.field.comment.input.comment_body.yml
@@ -11,7 +11,7 @@ id: comment.input.comment_body
 field_name: comment_body
 entity_type: comment
 bundle: input
-label: Comment
+label: Contribution
 description: ''
 required: true
 translatable: true
