--- a/config/sync/block.block.bobpol_messages.yml
+++ b/config/sync/block.block.bobpol_messages.yml
@@ -10,7 +10,7 @@ _core:
   default_config_hash: 5MNdk3fpMKx_xxBTcz2T11DL4XEU1H5SgHl8BsYdFsA
 id: bobpol_messages
 theme: bobpol
-region: content
+region: header
 weight: -3
 provider: null
 plugin: system_messages_block
