--- a/config/sync/core.entity_view_display.node.static_page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.static_page.teaser.yml
@@ -27,5 +27,7 @@ content:
     weight: 100
     region: content
 hidden:
+  field_comments: true
   field_image: true
+  field_teaser: true
   langcode: true
