SALG-299: Added config

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -3,11 +3,13 @@ module:
   better_exposed_filters: 0
   block: 0
   bobpol_hotness: 0
+  bobpol_user: 0
   breakpoint: 0
   ckeditor: 0
   comment: 0
   config_translation: 0
   contextual: 0
+  datetime: 0
   dblog: 0
   dynamic_page_cache: 0
   editor: 0
@@ -35,6 +37,7 @@ module:
   update: 0
   user: 0
   views_ui: 0
+  wayf_dk_login: 0
   ds: 1
   ds_extras: 2
   views: 10
