--- a/config/sync/block.block.aarhushero.yml
+++ b/config/sync/block.block.aarhushero.yml
@@ -21,6 +21,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "<front>\r\n/user\r\n/user/*"
+    pages: '<front>'
     negate: false
     context_mapping: {  }
