--- a/config/sync/field.field.comment.input.comment_body.yml
+++ b/config/sync/field.field.comment.input.comment_body.yml
@@ -1,5 +1,5 @@
 uuid: 3e9c1867-450f-4ed9-a579-1f51ce95216c
-langcode: en
+langcode: da
 status: true
 dependencies:
   config:
@@ -11,7 +11,7 @@ id: comment.input.comment_body
 field_name: comment_body
 entity_type: comment
 bundle: input
-label: Contribution
+label: Bidrag
 description: ''
 required: true
 translatable: true
