--- a/web/modules/custom/bobpol_user/bobpol_user.services.yml
+++ b/web/modules/custom/bobpol_user/bobpol_user.services.yml
@@ -1,5 +1,5 @@
 services:
-  bobpol_user.route_subscriber:
-    class: Drupal\bobpol_user\Routing\RouteSubscriber
+  theme.negotiator.bobpol_user:
+    class: Drupal\bobpol_user\Theme\BobpolUserThemeNegotiator
     tags:
-      - { name: event_subscriber }
+      - { name: theme_negotiator, priority: 1000 }
