--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/console": "~1.0",
         "drupal/core": "~8.5.1",
         "drupal/ds": "^3.1",
+        "drupal/email_registration": "^1.0@RC",
         "drupal/flag": "^4.0@alpha",
         "drupal/samlauth": "^1.3",
         "drupal/toolbar_visibility": "^1.2",
