--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -15,13 +15,27 @@ bundle: user
 mode: default
 content:
   account:
-    weight: 0
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_first_name:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_last_name:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
 hidden:
-  field_first_name: true
-  field_last_name: true
   field_valid: true
   field_validation_date: true
   langcode: true
