--- a/config/sync/block.block.faner.yml
+++ b/config/sync/block.block.faner.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - system
+    - user
   theme:
     - bobpol
 id: faner
@@ -25,3 +26,10 @@ visibility:
     pages: "/user\r\n/user/*"
     negate: false
     context_mapping: {  }
+  user_role:
+    id: user_role
+    roles:
+      anonymous: anonymous
+    negate: false
+    context_mapping:
+      user: '@user.current_user_context:current_user'
