--- a/config/sync/block.block.faner.yml
+++ b/config/sync/block.block.faner.yml
@@ -22,6 +22,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/user\r\n/user/*"
+    pages: "/user/register\r\n/user/login\r\n/user/password"
     negate: false
     context_mapping: {  }
