--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -4,6 +4,7 @@ module:
   block: 0
   bobpol_hotness: 0
   bobpol_user: 0
+  bobpol_user_validate: 0
   breakpoint: 0
   ckeditor: 0
   comment: 0
@@ -30,6 +31,7 @@ module:
   node: 0
   options: 0
   page_cache: 0
+  samlauth: 0
   system: 0
   taxonomy: 0
   text: 0
