SALG-230: More SAML configuration

--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -17,4 +17,5 @@ permissions:
   - 'post comments'
   - 'skip comment approval'
   - 'unflag promote'
+  - 'view sp metadata'
   - 'view the administration theme'
