--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -13,4 +13,5 @@ permissions:
   - 'access content'
   - 'flag promote'
   - 'unflag promote'
+  - 'view sp metadata'
   - 'view the administration theme'
