SALG-299: Added login styling

--- a/config/sync/block.block.faner.yml
+++ b/config/sync/block.block.faner.yml
@@ -9,8 +9,8 @@ dependencies:
     - bobpol
 id: faner
 theme: bobpol
-region: content
-weight: 0
+region: sidebar
+weight: -3
 provider: null
 plugin: local_tasks_block
 settings:
