--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,9 @@
         "drupal/ds": "^3.1",
         "drupal/email_registration": "^1.0@RC",
         "drupal/flag": "^4.0@alpha",
+        "drupal/itk_cookie_message": "^1.0",
+        "drupal/itk_siteimprove": "^1.0",
+        "drupal/pathauto": "^1.2",
         "drupal/samlauth": "^1.3",
         "drupal/toolbar_visibility": "^1.2",
         "drush/drush": "^9.0.0",
