--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -11,6 +11,7 @@ module:
   comment: 0
   config_translation: 0
   contextual: 0
+  ctools: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
@@ -23,6 +24,8 @@ module:
   flag: 0
   image: 0
   itk_admin_links: 0
+  itk_cookie_message: 0
+  itk_siteimprove: 0
   language: 0
   layout_discovery: 0
   link: 0
@@ -32,16 +35,19 @@ module:
   node: 0
   options: 0
   page_cache: 0
+  path: 0
   samlauth: 0
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   toolbar_visibility: 0
   update: 0
   user: 0
   views_ui: 0
   ds: 1
+  pathauto: 1
   ds_extras: 2
   views: 10
   minimal: 1000
