--- a/config/sync/pathauto.pattern.content.yml
+++ b/config/sync/pathauto.pattern.content.yml
@@ -9,15 +9,16 @@ label: Content
 type: 'canonical_entities:node'
 pattern: '[node:title]'
 selection_criteria:
-  ea0bd20b-0f42-428b-8aa4-6db28b78d8b8:
+  53332727-619a-46b9-a73f-364a90ee0b0e:
     id: node_type
     bundles:
-      post: post
       static_page: static_page
+      news: news
+      post: post
     negate: false
     context_mapping:
       node: node
-    uuid: ea0bd20b-0f42-428b-8aa4-6db28b78d8b8
+    uuid: 53332727-619a-46b9-a73f-364a90ee0b0e
 selection_logic: and
 weight: -5
 relationships: {  }
