--- a/config/sync/core.entity_form_display.node.static_page.default.yml
+++ b/config/sync/core.entity_form_display.node.static_page.default.yml
@@ -6,12 +6,14 @@ dependencies:
     - field.field.node.static_page.body
     - field.field.node.static_page.field_comments
     - field.field.node.static_page.field_image
+    - field.field.node.static_page.field_sidebar
     - field.field.node.static_page.field_teaser
     - image.style.thumbnail
     - node.type.static_page
   module:
     - comment
     - image
+    - path
     - text
 id: node.static_page.default
 targetEntityType: node
@@ -47,6 +49,14 @@ content:
     third_party_settings: {  }
     type: image_image
     region: content
+  field_sidebar:
+    weight: 31
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_teaser:
     weight: 7
     settings:
@@ -61,6 +71,12 @@ content:
     region: content
     settings:
       include_locked: true
+    third_party_settings: {  }
+  path:
+    type: path
+    weight: 30
+    region: content
+    settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
