--- a/config/sync/core.entity_view_display.node.static_page.default.yml
+++ b/config/sync/core.entity_view_display.node.static_page.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.static_page.body
     - field.field.node.static_page.field_comments
     - field.field.node.static_page.field_image
+    - field.field.node.static_page.field_sidebar
     - field.field.node.static_page.field_teaser
     - image.style.hero
     - node.type.static_page
@@ -41,12 +42,14 @@ third_party_settings:
         - field_teaser
         - body
         - node_changed_date
+      right:
+        - field_sidebar
       footer:
         - 'dynamic_block_field:node-timeline'
     fields:
       'dynamic_block_field:node-timeline':
         plugin_id: 'dynamic_block_field:node-timeline'
-        weight: 5
+        weight: 6
         label: hidden
         formatter: default
       node_changed_date:
@@ -84,6 +87,13 @@ content:
     third_party_settings: {  }
     type: image
     region: header
+  field_sidebar:
+    weight: 5
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: right
   field_teaser:
     weight: 2
     label: hidden
