--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -17,6 +17,7 @@ module:
   dynamic_page_cache: 0
   editor: 0
   email_registration: 0
+  entityqueue: 0
   field: 0
   field_ui: 0
   file: 0
@@ -24,7 +25,6 @@ module:
   flag: 0
   image: 0
   itk_admin_links: 0
-  itk_cookie_message: 0
   itk_siteimprove: 0
   language: 0
   layout_discovery: 0
