--- a/config/sync/node.type.post.yml
+++ b/config/sync/node.type.post.yml
@@ -10,7 +10,7 @@ third_party_settings:
     parent: ''
 name: Post
 type: post
-description: ''
+description: 'Borgervendt spørgsmål'
 help: ''
 new_revision: false
 preview_mode: 0
