--- a/config/sync/user.role.admin.yml
+++ b/config/sync/user.role.admin.yml
@@ -21,19 +21,26 @@ permissions:
   - 'administer taxonomy'
   - 'administer users'
   - 'cancel account'
+  - 'create news content'
   - 'create post content'
   - 'create static_page content'
   - 'create terms in subjects'
+  - 'delete any news content'
   - 'delete any post content'
   - 'delete any static_page content'
+  - 'delete own news content'
   - 'delete own post content'
   - 'delete own static_page content'
   - 'delete terms in subjects'
+  - 'edit any news content'
   - 'edit any post content'
   - 'edit any static_page content'
+  - 'edit own news content'
   - 'edit own post content'
   - 'edit own static_page content'
   - 'edit terms in subjects'
+  - 'manipulate all entityqueues'
+  - 'manipulate entityqueues'
   - 'translate interface'
   - 'use text format filtered_html'
   - 'view own unpublished content'
