--- a/web/themes/bobpol/bobpol.info.yml
+++ b/web/themes/bobpol/bobpol.info.yml
@@ -5,6 +5,7 @@ core: 8.x
 libraries:
   - bobpol/global-styling
   - bobpol/bottom-scripts
+  - bobpol/bottom-scripts
 regions:
   header: Header
   hero: Hero
